# lovelymisclab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/misclab-core/: Cargo.toml
crates/misclab-core/src/graph/: executor.rs  port.rs
crates/misclab-core/src/nodes/: a1z26.rs  adfgvx.rs  audio_spectrogram.rs  bacon.rs  basex.rs  bcrypt.rs  bifid.rs  bits_image.rs  bitwise.rs  blind_watermark_bwm.rs  blind_watermark_dual.rs  blowfish.rs  bmp_fix.rs  bmp_padding.rs  braille.rs  brainfuck.rs  caesar.rs  chacha.rs  change_case.rs  char_freq.rs  charcode.rs  cloacked_pixel.rs  cpython_random.rs  defang.rs  deflate.rs  des.rs  enigma.rs  entropy.rs  exif_meta.rs  extract.rs  filetype.rs  hash.rs  hash_crack.rs  hexdump.rs  html_entity.rs  imagemask.rs  json_format.rs  jwt.rs  lsb_stego.rs  mod.rs  (+30 more)
crates/misclab-core/tests/: cyberchef.rs  engine.rs  image_ops.rs  script_node.rs  stego.rs  stego_tools.rs
scripts/: check-utf8.mjs
src/: App.tsx
src-tauri/: tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: agent.rs  ai_workflow.rs  update.rs
src-tauri/src/mcp/: itest.rs  server.rs
src/app/: AgentPanel.tsx  AiGenerateDialog.tsx  AutoSave.tsx  CommandPalette.tsx  HelpDialog.tsx  KeyboardShortcuts.tsx  LiveRunner.tsx  RunConsole.tsx  TitleBar.tsx
src/flow/: Canvas.tsx  GenericNode.tsx  Inspector.tsx  LabeledEdge.tsx  ModuleLibrary.tsx  SelectorNode.tsx  agentRunner.ts  nodeDescriptions.ts  nodeIcons.tsx  portColors.ts  portValue.tsx  runner.ts
src/lib/: bindings.ts  devMocks.ts  project.ts  templates.ts
src/store/: agent.ts  graph.ts  help.ts  run.ts  workspace.ts
src/views/: EmptyState.tsx  ModuleRunDialog.tsx
